--- a/index.html
+++ b/index.html
@@ -198,10 +198,60 @@
 
 		<!-- OPERAZIONI -->
 
+		<section class="operazioni small-container">
+			<h3>Esegui più operazioni con Dropbox business</h3>
+			<div class="boxes mt5">
+				<div class="card">
+					<img src="img/business-feature-switching-tools.png" alt="feature">
+					<h5>Passa di meno da uno strumento all'altro</h5>
+					<p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti,
+					Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+				</div>
+				<div class="card">
+					<img src="img/business-feature-send-files-it.png" alt="feature">
+					<h5>Passa di meno da uno strumento all'altro</h5>
+					<p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti,
+					Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+				</div>
+				<div class="card">
+					<img src="img/business-feature-multi-device.png" alt="feature">
+					<h5>Passa di meno da uno strumento all'altro</h5>
+					<p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti,
+					Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+				</div>
+				<div class="card">
+					<img src="img/business-feature-integrations-it.png" alt="feature">
+					<h5>Passa di meno da uno strumento all'altro</h5>
+					<p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti,
+					Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+				</div>
+				<div class="card">
+					<img src="img/business-feature-multi-device.png" alt="feature">
+					<h5>Passa di meno da uno strumento all'altro</h5>
+					<p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti,
+					Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+				</div>
+				<div class="card">
+					<img src="img/business-feature-security.png" alt="feature">
+					<h5>Passa di meno da uno strumento all'altro</h5>
+					<p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da
+						Documenti,
+						Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+				</div>
+			</div>
+
+			
+		</section>
+
 
 		<!-- TEAMS -->
 
-		<section class="team mt5">
+		<section class="scopri small-container">
+			<h3>Piu di 500.000 team utilizzano Dropbox business</h3>
+			<a href="#">Scopri di pù sui nostri clienti</a>
+		</section>
+
+		<section class="team ">
 			<div class="divisione">
 				<div class="quadrato">
 					<img src="img/designit.svg" alt="designit">
@@ -244,7 +294,101 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="bottom-team">
+			<div class="small-container">
+				<h3>Porta Dropbox Business <br> nella tua azienda.</h3>
+				<a href="#">Inizia la tua prova gratuita</a>
+			</div>
+
+		</section>
+
+		<!-- DOMANDE FREQUENTI -->
+
+		<section class="domande small-container mt5">
+			<h3>Domande frequenti</h3>
+			<hr>
+			<details>
+				<summary>Qual è la differenza tra Droopbox Business Standard e Dropbox Business Advanced?</summary>
+				<p>Il piano Standard fornisce ai team 5 TB (5000 GB) di spazio di archiviazione e semplici strumenti di condivisione e
+				collaborazione. Per i team che hanno bisogno di più spazio di archiviazione e sicurezza, il piano Advanced offre tutto
+				lo spazio necessario al team, oltre a sofisticate funzioni di amministrazione, controllo, integrazione e sicurezza. Per
+				ulteriori informazioni sui nostri piani, consulta questa pagina.</p>
+			</details>
+			<hr>
+			<details>
+				<summary>Qual è la differenza tra Droopbox Business Standard e Dropbox Business Advanced?</summary>
+				<p>Il piano Standard fornisce ai team 5 TB (5000 GB) di spazio di archiviazione e semplici strumenti di condivisione
+					e
+					collaborazione. Per i team che hanno bisogno di più spazio di archiviazione e sicurezza, il piano Advanced offre
+					tutto
+					lo spazio necessario al team, oltre a sofisticate funzioni di amministrazione, controllo, integrazione e
+					sicurezza. Per
+					ulteriori informazioni sui nostri piani, consulta questa pagina.</p>
+			</details>
+			<hr>
+			<details>
+				<summary>Qual è la differenza tra Droopbox Business Standard e Dropbox Business Advanced?</summary>
+				<p>Il piano Standard fornisce ai team 5 TB (5000 GB) di spazio di archiviazione e semplici strumenti di condivisione
+					e
+					collaborazione. Per i team che hanno bisogno di più spazio di archiviazione e sicurezza, il piano Advanced offre
+					tutto
+					lo spazio necessario al team, oltre a sofisticate funzioni di amministrazione, controllo, integrazione e
+					sicurezza. Per
+					ulteriori informazioni sui nostri piani, consulta questa pagina.</p>
+			</details>
+
+		</section>
+
+
 	</main>
+
+	<!-- FOOTER -->
+
+	<footer>
+		<div class="small-container">
+			<div class="contatti">
+				<h5>Dropbox</h5>
+				<p>Applicazione Desktop</p>
+				<p>Perchè Dropbox</p>
+				<p>Piani</p>
+				<p>Sicurezza</p>
+				<p>Funzioni</p>
+			</div>
+			<div class="contatti">
+				<h5>Dropbox</h5>
+			<p>Applicazione Desktop</p>
+			<p>Perchè Dropbox</p>
+			<p>Piani</p>
+			<p>Sicurezza</p>
+			<p>Funzioni</p></div>
+			<div class="contatti">
+				<h5>Dropbox</h5>
+				<p>Applicazione Desktop</p>
+				<p>Perchè Dropbox</p>
+				<p>Piani</p>
+				<p>Sicurezza</p>
+				<p>Funzioni</p>
+			</div>
+			<div class="contatti">
+				<h5>Dropbox</h5>
+				<p>Applicazione Desktop</p>
+				<p>Perchè Dropbox</p>
+				<p>Piani</p>
+				<p>Sicurezza</p>
+				<p>Funzioni</p>
+			</div>
+			<div class="contatti">
+				<h5>Dropbox</h5>
+				<p>Applicazione Desktop</p>
+				<p>Perchè Dropbox</p>
+				<p>Piani</p>
+				<p>Sicurezza</p>
+				<p>Funzioni</p>
+			</div>
+
+		</div>
+	</footer>
 
 </body>
 
