push-pre meeting

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 		<!-- BUSINESS -->
 
 		<section class="small-container mt5">
-			<h2>Trova il piano business che fa per te</h2>
+			<h2 class="mb5">Trova il piano business che fa per te</h2>
 			<button>Fatturazione mensile</button>
 			<button>Fatturazione annuale</button>
-			<nav>
+			<nav class="mt5">
 				<div class="piano">
 					<p class="titolo-piano">
 						Singolo
